# ask-youtube-playlists

./: .buildinfo  .env.template  .gitignore  Makefile  README.md  ask_youtube_playlists.data_processing.html  ask_youtube_playlists.html  ask_youtube_playlists.question_answering.html  genindex.html  index.html  install_app.py  modules.html  objects.inv  py-modindex.html  pyproject.toml  run_app.py  search.html  searchindex.js  setup.cfg  tox.ini
.doctrees/: ask_youtube_playlists.data_processing.doctree  ask_youtube_playlists.doctree  ask_youtube_playlists.question_answering.doctree  environment.pickle  index.doctree  modules.doctree
.github/workflows/: documentation.yaml  tests.yaml
_modules/: index.html
_modules/ask_youtube_playlists/data_processing/: create_documents.html  create_embeddings.html  download_transcripts.html  utils.html
_modules/ask_youtube_playlists/question_answering/: extractive.html  generative.html  retriever.html
_sources/: ask_youtube_playlists.data_processing.rst.txt  ask_youtube_playlists.question_answering.rst.txt
ask_youtube_playlists/: ask_youtube_playlist.py
ask_youtube_playlists/data/: download_transcripts.py
ask_youtube_playlists/data_processing/: __init__.py  create_db.py  create_documents.py  create_embeddings.py  download_transcripts.py  models.py  preprocessing.py  utils.py
ask_youtube_playlists/qa/: ask_youtube_playlist.py
ask_youtube_playlists/question_answering/: __init__.py  answer.py  extractive.py  generative.py  question_answerer.py  retrieve.py  retriever.py
ask_youtube_playlists/setup/: __init__.py  create_db.py  download_transcripts.py  models.py
config/: models.yaml
configs/: embedding_model.yaml  embedding_models.yaml  main.yaml
docs/source/: ask_youtube_playlists.data_processing.rst  ask_youtube_playlists.question_answering.rst  ask_youtube_playlists.rst  conf.py  index.rst  modules.rst
src/app/data/: load_data.py
src/app/installation/: __init__.py  preprocessing.py
src/app/setup/: __init__.py  create_db.py  download_transcripts.py
src/qa_system/: __init__.py
src/qa_system/base/: __init__.py  episode.py  question_answerer.py  retriever.py
src/qa_system/core/: embedder.py  information_retriever.py  question_answerer.py
src/qa_system/data/: __init__.py  podcast_dataset.py  process_data.py
src/qa_system/information_retrieval/: distilbert_retriever.py
tests/: test_create_db.py  test_data_processing_utils.py  test_download_transcripts.py  test_process_data.py  test_retrieve.py
tests/data/: processed_data_example.txt  raw_data_example.txt
tests/data/azure/msmarco-MiniLM-L-6-v3_320_64/: hyperparams.yaml
tests/data/azure/raw/: Video_1.json  Video_2.json
tests/data/raw/: example_download.json
tests/data3/raw/: example_chunked.json  example_download.json
web_app/: Homepage.py  Load.py  utils.py
web_app/pages/: 1_Create Embeddings.py  1_📚 Concepts.py  1_🔍 Extractive Question Answering.py  1_🧩 Create Embeddings.py  2_ 🧠 Generative Question Answering.py  2_👋 Who we are.py  3_🔍 Extractive Question Answering.py  4_📚 Concepts.py  5_👋 Who we are.py  6_Question Answering.py  6_❓ Question Answering.py
(+4 files in other folders)
