[tool.poetry]
name = "qa-system"
version = "0.1.0"
description = "A Question-Answering application for Youtube videos and playlists"
authors = ["Pabloo22 <pablete.arino@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "qa_system", from = "src" },
    { include = "app", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.8.1"
torch = "^2.0.0"
transformers = "^4.28.1"
numpy = "^1.24.3"
python-dotenv = "^1.0.0"
pandas = "^2.0.1"
sentence-transformers = "^2.2.2"
dataenforce = "^0.1.2"
langchain = "^0.0.182"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
mypy = "^1.2.0"
flake8 = "^6.0.0"
tox = "^4.5.1"
pytest-cov = "^4.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.flake8]
max-line-length = 79
max-complexity = 18
select = ["B","C","E","F","W","T4","B9"]
