[tool.poetry]
name = "ask_youtube_playlists"
version = "0.1.0"
description = "A Question-Answering application for Youtube videos and playlists"
authors = ["Pabloo22 <pablo.arino@alumnos.upm.es>",
           "Beatpc <beatriz.p.correia@student.put.poznan.pl>",
           "alvarola17 <alvaro.laguna@alumnos.upm.es>"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "ask_youtube_playlists" }
]

[tool.poetry.dependencies]
python = "^3.8.1"
torch = "^1.12.1"
transformers = "^4.28.1"
numpy = "^1.24.3"
python-dotenv = "^1.0.0"
sentence-transformers = "^2.2.2"
pytube = "^15.0.0"
youtube-transcript-api = "^0.6.0"
langchain = "^0.0.197"
chromadb = "^0.3.26"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
mypy = "^1.2.0"
flake8 = "^3.8.2"
pytest-cov = "^4.0.0"
pylint = "^2.17.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
files = ["ask_youtube_playlists", "tests", "web_app"]
check_untyped_defs = true
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::DeprecationWarning",
]

